fix overflow bag and changed nav size menu for 800px

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,6 +1,6 @@
 .nav {
   white-space: nowrap;
-  
+
   &__list {
     display: flex;
     justify-content: center;
@@ -55,6 +55,11 @@
       flex-direction: column;
       align-items: center;
       padding: 0;
+    }
+
+    &__item {
+      font-size: 20px;
+      margin-bottom: 5px;
     }
   }
 }
